# Banter

./: .coverage  .dockerignore  .gitignore  .user.yml  Dockerfile  README.md  dbt_project.yml  docker-compose.yml  heroku.yml  main.py  profiles.yml  pyproject.toml
dashboard/app/: main.py
dashboard/static/: index.html  scripts.js  styles.css
data/bronze/affiliate1/assets/2025/04/04/: page_1.json
data/bronze/affiliate1/assets/2025/04/05/: page_1.json
data/bronze/affiliate1/assets/2025/04/06/: page_1.json
docs/: schema.md  schema_documentation.md
scripts/: clear_database.py  load_bronze_to_sql.py  load_raw_to_bronze.py  transform_bronze_to_silver.py  transform_silver_to_gold.py
sql/: schemas.sql
sql/tables/: bronze_schema.sql  gold_schema.sql  schema.sql  silver_schema.sql
src/: run_bitget_etl.py
src/api/: bitget_client.py
src/config/: settings.py
src/dashboard/app/: main.py
src/dashboard/static/: index.html  script.js  scripts.js  styles.css
src/db/: __init__.py  connection.py  reset.py  session.py  setup.py
src/etl/: bitget_etl.py  run_bitget_etl.py
src/etl/bronze/: extractors.py  loaders.py  run_bronze_etl.py
src/etl/gold/: run_gold_etl.py  views.py
src/etl/silver/: run_silver_etl.py  transformers.py
src/etl/utils/: clear_database.py
src/models/: bitget_models.py  etl_models.py
src/utils/: data_quality.py  db.py  db_reset.py  db_setup.py  generate_sample_data.py  logging_config.py
tests/test_api/: test_bitget_client.py
tests/test_db/: test_database.py
tests/test_etl/: test_bitget_etl.py
~/.dbt/: profiles.yml
(+277 files in other folders)
